# UGC

./: .gitignore  mypy.ini  setup.cfg
.github/workflows/: main.yml
architecture/: README.md  current_architecture.puml  tobe_architecture.puml
auth_api/: .env.example  Dockerfile  README.md  docker-compose.yaml  requirements.txt
auth_api/src/: pytest.ini  wsgi_app.py
benchmark/: README.md  create_data_file.py
benchmark/mongodb/: README.md  (+2 more)
elk/: docker-compose.yml
etl/: .env.example  README.md  config.py  docker-compose.yml  main.py  models.py  requirement.txt
ugc_api/: .env.example  README.md  docker-compose-kafka.yml  docker-compose-mongodb.yml  docker-compose-ugc_api.yml  docker-compose.yml  pyproject.toml  requirements.txt
ugc_api/compose/ugc_api/: Dockerfile
ugc_api/deploy/nginx/: nginx.conf  site.conf
ugc_api/mongodb/bash/: init_config_server.sh  init_replica.sh  init_router.sh
ugc_api/mongodb/scripts/: config_server.js  replica_1.js  replica_2.js  router.js
ugc_api/mongodb/scripts3/: config_server.js  replica_1.js  replica_2.js  router.js
ugc_api/src/: main.py
ugc_api/src/api/v1/: favorites.py  reviews.py  root.py  scores.py  views.py
ugc_api/src/core/: config.py  decorators.py  errors.py  initialize.py  logger.py  middleware.py
ugc_api/src/core/auth/: user_pb2_grpc.py
ugc_api/src/db/: kafka.py  manager.py  message_broker.py  mongodb.py  storage.py
ugc_api/src/models/: base.py  favorites.py  movies.py  reviews.py  scores.py  views.py
ugc_api/src/services/: base.py  favorites.py  reviews.py  reviews_votes.py  scores.py  views.py
(+110 files in other folders)
